added a few codes to maid.handlebars still not pulling to dashboard

--- a/views/partials/maid-info.handlebars
+++ b/views/partials/maid-info.handlebars
@@ -1,5 +1,8 @@
 <article class="maid">
     <div class="title">
+        {{maid.name}}
+    </div>
+    <div class="meta">
         <a href="/maid/{{id}}">{{reviews.length}} {{format_plural "review" review.length}} </a>
     </div>
 </article>
