fixed maid view

--- a/views/partials/maid-info.handlebars
+++ b/views/partials/maid-info.handlebars
@@ -1,6 +1,6 @@
 <article class="maid">
     <div class="title">
-        {{maid.name}}
+        {{ name }}
     </div>
     <div class="meta">
         <a href="/maid/{{id}}">{{reviews.length}} {{format_plural "review" review.length}} </a>
