--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -20,6 +20,6 @@
   </ol>
 </section>
 {{/if}}
-<script src="/javascript/add-review.js"></script>
+{{!-- <script src="/javascript/add-review.js"></script> --}}
 <script src="/javascript/edit-review.js"></script>
 <script src="/javascript/delete-review.js"></script>
