--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,11 @@
 {{!-- route maid info to here; will follow template from homepage Module 14 on how it lists all posts from all users --}}
-
+<body>
+  <div class="dash-container">
+<div class="dash-section">
+  <div class="dash-header">
+    <h2>Dashboard</h2>
+  </div>
+  <div class="dash-maid">
 <ol class="maid-list">
   {{#each maids as |maid|}}
   <li>
@@ -7,6 +13,14 @@
   </li>
   {{/each}}
 </ol>
+  </div>
+</div>
+
+<div class="dash-review-section">
+  <div class="dash-header">
+    <h2>My Reviews</h2>
+  </div>
+  <div class="my-reviews">
 {{#if loggedIn}}
 {{!-- List reviews left by loggedIn user --}}
   <h2>Your Reviews</h2>
@@ -20,6 +34,10 @@
   </ol>
 </section>
 {{/if}}
+  </div>
+</div>
+</div>
 <script src="/javascript/add-review.js"></script>
 <script src="/javascript/edit-review.js"></script>
 <script src="/javascript/delete-review.js"></script>
+</body>
