--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#reviews">Reviews</a></li>
             {{else}}
-              <li><a href="/">Home</a></li>
-              <li><a href="/" id="logout">Logout</a></li>
+              <li><a href="/homepage" id="logout">Logout</a></li>
               <li><a href="/dashboard">Dashboard</a></li>
             {{/if}}
           </ul>
@@ -32,17 +31,11 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="bot-nav">
-        <ul class="bot-nav-ul">
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#reviews">Reviews</a></li>
-        </ul>
-      </div>
+      
       <div class="footer-credits">
         Made by Alexis El Armani, Hilliard Stamper, Ivy Do
       </div>
     </footer>
-      <script src="/javascript/logout.js"></script>
+      <script src="javascript/logout.js"></script>
     </body>
 </html>
