add scripts to bottom of single-maid.handlebars and remove from dashboard.handlebars

--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -1,3 +1,5 @@
+
+
 <ol class="maid-list">
     {{#each maids as |maid|}}
     <li>
@@ -24,4 +26,6 @@
 
 {{#if loggedIn}}
 <script src="/javascript/review.js"></script>
+<script src="/javascript/edit-review.js"></script>
+<script src="/javascript/delete-review.js"></script>
 {{/if}}
