--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -2,7 +2,7 @@
     {{#each this}}
     <section class="review">
         <div class="meta">
-            {{user.username}} on {{format_date created_at}}
+            {{ username }} on {{format_date created_at}}
         </div>
 
         <div class="text">
