--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
         <div class="nav">
           <ul class="nav-ul">
             {{#if loggedIn}}
-              <li><a href="/homepage" id="logout">Logout</a></li>
+              <li><a href="/" id="logout">Logout</a></li>
               <li><a href="/dashboard">Dashboard</a></li>
             {{else}}
               <li><a href="/">Home</a></li>
