single-maid route working, need to finesse headers as it is displaying in JSON format still

--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -2,7 +2,7 @@
     {{#each this}}
     <section class="review">
         <div class="meta">
-            {{ username }} on {{format_date created_at}}
+            {{ username }} on {{format_date}}
         </div>
 
         <div class="text">
