tweaks in handlebars and review-routes

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
   <ol>
     {{#each reviews as |review|}}
     <li>
-      {{> review-info review}}
+      {{> reviews review}}
       {{!-- <a href="/dashboard/edit/{{review.id}}" class="edit-link">Edit Review</a> --}}
     </li>
     {{/each}}
