single-maid page working, showing maid name views associated with maid, review form submit working and saving

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,8 @@
         Made by Alexis El Armani, Hilliard Stamper, Ivy Do
       </div>
     </footer>
+    {{#if loggedIn}}
       <script src="javascript/logout.js"></script>
+      {{/if}}
     </body>
 </html>
