--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,15 +4,17 @@
 <div class="dash-section">
   <div class="dash-header">
     <h2>Dashboard</h2>
+
+    {{#if loggedIn}}
   </div>
   <div class="dash-maid">
-<ol class="maid-list">
+<ul class="maid-list">
   {{#each maids as |maid|}}
   <li>
     {{> maid-info maid }}
   </li>
   {{/each}}
-</ol>
+</ul>
   </div>
 </div>
 
@@ -21,15 +23,15 @@
     <h2>My Reviews</h2>
   </div>
   <div class="my-reviews">
-{{#if loggedIn}}
+
 
 {{!-- List reviews left by loggedIn user --}}
-  <h2>Your Reviews</h2>
+  
   <ol>
     {{#each reviews as |review|}}
     <li>
       {{> reviews review}}
-      {{!-- <a href="/dashboard/edit/{{review.id}}" class="edit-link">Edit Review</a> --}}
+      <a href="/dashboard/edit/{{review.id}}" class="edit-link">Edit Review</a>
     </li>
     {{/each}}
   </ol>
@@ -38,7 +40,7 @@
   </div>
 </div>
 </div>
-<script src="/javascript/add-review.js"></script>
-<script src="/javascript/edit-review.js"></script>
-<script src="/javascript/delete-review.js"></script>
+
+{{!-- <script src="/javascript/edit-review.js"></script>
+<script src="/javascript/delete-review.js"></script> --}}
 </body>
