--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -2,7 +2,7 @@
     {{#each this}}
     <section class="review">
         <div class="meta">
-            {{ username }} on {{format_date}}
+            {{ review }} on {{format_date}}
         </div>
 
         <div class="text">
