--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -1,5 +1,6 @@
 {{!-- Show maid name and review qty --}}
 <article class="maid">
+    <a href="/dashboard"> &larr; Back to dashboard</a>
     <div class="title">
         {{ maid.name }}
     </div>
@@ -12,6 +13,10 @@
 {{!-- add review form --}}
 {{#if loggedIn}}
 <form class="review-form">
+    <div>
+        <label for="review-title">Title:</label>
+        <input type="text" name="review-title" id="review-title">
+    </div>
     <div>
         <textarea name="review-body"></textarea>
     </div>
@@ -34,7 +39,7 @@
         <div class="text">
             <ul>
                 <li>
-                {{review_text}}
+                    {{title}} {{review_text}}
                 </li>
             </ul>
         </div>
@@ -44,4 +49,5 @@
 
 {{#if loggedIn}}
 <script src="/javascript/review.js"></script>
+
 {{/if}}
