--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -17,4 +17,4 @@
 
 <script src="/javascript/edit-review.js"></script>
 <script src="/javascript/delete-review.js"></script>
-<script src="/javascript/review.js"></script>
+{{!-- <script src="/javascript/review.js"></script> --}}
