combined get code for maids and reviews, loads with zero errors, but review data is not showing on dashboard page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,7 +38,7 @@
   {{/if}}
 
 
-<script src="/javascript/review.js"></script>
+{{!-- <script src="/javascript/review.js"></script>
 <script src="/javascript/edit-review.js"></script>
-<script src="/javascript/delete-review.js"></script>
+<script src="/javascript/delete-review.js"></script> --}}
 </body>
