trying to find how to pull reviews and how to get username to post on single-maid.js view; still not showing

--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -8,6 +8,7 @@
         <div class="text">
             {{title}}
             {{review_text}}
+            {{user.username}}
         </div>
     </section>
     {{/each}}
