--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -18,11 +18,12 @@
         <input type="text" name="review-title" id="review-title">
     </div>
     <div>
+        <label for="review-body">Review:</label>
         <textarea name="review-body"></textarea>
     </div>
 
     <div>
-        <button type="submit">Add Review</button>
+        <button type="submit">Post Review</button>
     </div>
 </form>
 {{/if}}
