--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -2,15 +2,10 @@
     <a href="/dashboard"> &larr; Back to dashboard</a>
     <h2> Edit Review</h2>
 
-    
+    <h4>Upate Title:</h4>
     <form class="edit-review-form">
-        <div>
-            <label for="review-title">
-                <h4>Title Update:
-                    
-                </h4>
-                <textarea name="review-title" id="review-title">{{review.title}}</textarea>
-            </label>
+        <div>                
+            <textarea name="review-title" id="review-title">{{review.title}}</textarea>
             <span>{{review.title}}</span>
         </div>
 
