reviews are displaying on dashboard; usernames display with the review on single-maid view; and text for review displaying on edit review, working on getting it to save

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,4 @@
 {{!-- route maid info to here; will follow template from homepage Module 14 on how it lists all posts from all users --}}
-<body>
   <div class="dash-container">
 <div class="dash-section">
   <div class="dash-header">
@@ -41,4 +40,5 @@
 {{!-- <script src="/javascript/review.js"></script>
 <script src="/javascript/edit-review.js"></script>
 <script src="/javascript/delete-review.js"></script> --}}
-</body>
+</div>
+
