--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -10,6 +10,11 @@
         </div>
 
         <div>
+            <textarea name="review_text" id="review_text">{{review.review_text}}</textarea>
+            <span>{{review.review_text}}</span>
+        </div>
+
+        <div>
             <a href="/review/{{review.id}}">{{review.length}}</a>
         </div>
         <button type="submit">Save Review</button>
