--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -1,15 +1,15 @@
 <div class="reviews">
-    {{#each this}}
+    {{!-- {{#each this}} --}}
     <section class="review">
         <div class="meta">
-            {{ review }} on {{format_date}}
+            {{ title }} on {{format_date}}
         </div>
 
         <div class="text">
-            {{title}}
+            
             {{review_text}}
             {{user.username}}
         </div>
     </section>
-    {{/each}}
+    {{!-- {{/each}} --}}
 </div>
