--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Squeaky Cleaners</title>
-  <link rel="stylesheet" href="stylesheets/{{style}}">
+  <link rel="stylesheet" href="../stylesheets/{{style}}">
+    {{!-- <link rel="stylesheet" href="stylesheets/{{style}}"> --}}
+
 </head>
 <body>
       <!-- nav section-->
@@ -37,7 +39,7 @@
       </div>
     </footer>
     {{#if loggedIn}}
-      <script src="javascript/logout.js"></script>
+      <script src="../javascript/logout.js"></script>
       {{/if}}
     </body>
 </html>
