--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -1,4 +1,6 @@
 {{!-- Show maid name and review qty --}}
+
+
 <article class="maid">
     <a href="/dashboard"> &larr; Back to dashboard</a>
     <div class="title">
@@ -22,7 +24,7 @@
     </div>
 
     <div>
-        <button type="submit">Add Review</button>
+        <button type="submit" class="btn">Add Cookie</button>
     </div>
 </form>
 {{/if}}
@@ -48,6 +50,5 @@
 </div>
 
 {{#if loggedIn}}
-<script src="/javascript/review.js"></script>
-
+<script src="../javascript/review.js"></script>
 {{/if}}
