corrected date, mixed up maid and reviews so that it doesn't appearas the same user for all reviews one maid

--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -2,13 +2,13 @@
     {{!-- {{#each this}} --}}
     <section class="review">
         <div class="meta">
-            {{ title }} on {{format_date}}
+            {{ title }} on {{format_date created_at}}
         </div>
 
         <div class="text">
             
-            {{review_text}}
-            {{user.username}}
+            {{review_text}} </div>
+            {{!-- {{user.username}} --}}
         </div>
     </section>
     {{!-- {{/each}} --}}
