added withAuth from Hilliard found a way to have reviews for single maid drop in list

--- a/views/partials/reviews.handlebars
+++ b/views/partials/reviews.handlebars
@@ -7,7 +7,7 @@
 
         <div class="text">
             
-            {{review_text}} </div>
+            {{review_text}} 
             {{!-- {{user.username}} --}}
         </div>
     </section>
