added page for schedule demo linked, need images

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,6 +12,9 @@
   <li>
     {{> maid-info maid }}
   </li>
+  <li>
+    <a href="/maid/{{maid.id}}/schedule">Schedule Cleaning</a>
+  </li>
   {{/each}}
 </ul>
   </div>
