--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -10,7 +10,7 @@
     </div>
 
     <div class="meta">
-        <a href="/maid/{{maid.id}}">{{maid.reviews.length}} Review(s)</a>
+        Review(s)
     </div>
 </article>
 
