fixed js source for login.handlebar added .. to move up two directories

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,7 +44,7 @@
         </div>
       </form>
     </div>
-    <script src="/javascript/login.js"></script>
+    <script src="../javascript/login.js"></script>
 
 
     <div class="login-image-container">
