--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -4,7 +4,7 @@
 <article class="maid">
     <a href="/dashboard"> &larr; Back to dashboard</a>
     <div class="title">
-        {{ maid.name }}
+        <h2>{{ maid.name }}</h2>
     </div>
 
     <div class="meta">
@@ -25,7 +25,7 @@
     </div>
 
     <div>
-        <button type="submit">Post Review</button>
+        <button class= "btn" type="submit">Post Review</button>
     </div>
 </form>
 {{/if}}
