--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -4,7 +4,7 @@
 </head>
 
 <article class="schedule">
-    <a href="/dashboard"> &larr; Back to dashboard</a>
+    <a href="/dashboard" class="link"> &larr; Back to dashboard</a>
 
 
     <div class="title">
@@ -16,8 +16,8 @@
     </div>
     
     {{!-- show calendar and insert photo of week with time/day avaiable --}}
-    <div>
-        <img src="/../assets/test-schedule.png" alt="calendar" style: "schedule.css"/>
+    <div class="calendar-container">
+        <img src="/../assets/test-schedule.png" alt="calendar" class="calendar"/>
     </div>
 
     
