--- a/public/stylesheets/edit-review.css
+++ b/public/stylesheets/edit-review.css
@@ -8,6 +8,13 @@
   font-family: "Lato";
 }
 
+body {
+  background-color: #f5e9ee;
+}
+span {
+  line-height: 1.5;
+}
+
 /* nav */
  nav {
     display: flex;
@@ -110,24 +117,51 @@
 
   }
 
-  article {
-    margin-top: 80px;
-    margin-left: 20px;
-  }
+
 
   h2 {
     padding: 10px;
     font-size: 36px;
     text-align: center;
+    color: #2C3E50;
+
   }
+
+
 
   textarea {
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 3px;
-    margin-bottom: 10px;
-    width: 80%;
+    margin-bottom: 20px;
+    width: 100%;
     box-sizing: border-box;
     color: #2C3E50;
     font-size: 13px;
   }
+
+  .edit-section {
+    width: 50%;
+  }
+
+  .edit-review-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffffff;
+    width: 50%;
+    border-radius: 15px;
+    padding: 20px 0;
+  }
+
+  article {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+.link {
+  margin-top: 100px;
+  margin-left: 20px;
+}
