--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -119,7 +119,7 @@ li a:hover {
   color: #606060;
   font-family: "Source Sans Pro";
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.3;
   padding-bottom: 20px;
   margin: 20px 0px;
@@ -134,6 +134,7 @@ li a:hover {
   font-family: "Source Sans Pro";
   line-height: 2.5;
   opacity: 80%;
+  font-size: 18px;
   
 }
 
@@ -211,6 +212,5 @@ li a:hover {
     font-size: 18px;
     position: fixed;
     bottom: 0;
-    width: 100%;
-    margin-bottom: 10px;
+    background-color: #ffffff;
   }
