--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -76,6 +76,21 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: left;
+    background-color: #ffffff;
+    width: 50%;
+    border-radius: 30px;
+    padding: 20px 0;
+  
+}
+
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+align-items: center;}
+
+body {
+  background-color: rgb(234, 216, 236);
 }
 
 .form-header {
@@ -164,5 +179,5 @@ font-family: 'Ubuntu', sans-serif;
     position: fixed;
     bottom: 0;
     width: 100%;
-    margin-bottom: 10px;
+    background-color: white;
   }
