--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,6 @@
-<body>
   <!-- login image -->
 
-  <!-- login section -->
+  <!-- login section --><div class="main-container">
   <div class="form-section">
     <div class="login-section">
       <div class="form-header">
@@ -50,6 +49,6 @@
     <div class="login-image-container">
     </div>
   </div>
-</body>
+  </div>
 
-</html>
+
