--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
 
 <div class="dash-review-section">
     <div class="dash-header">
-      <h2>My Reviews</h2>
+      <h2 id="my-reviews">My Reviews</h2>
     </div>
 {{!-- List reviews left by loggedIn user --}}
   {{#if reviews.length}}
