--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
             {{#if loggedIn}}
               <li><a href="/" id="logout">Logout</a></li>
               <li><a href="/dashboard">Dashboard</a></li>
+              <li><a href="#my-reviews">My Reviews</a></li>
             {{else}}
               <li><a href="/">Home</a></li>
               <li><a href="/login">Login</a></li>
