--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -1,10 +1,11 @@
 <head>
-      <link rel="stylesheet" href="/../stylesheets/schedule.css">
+    <link rel="stylesheet" href="/../stylesheets/schedule.css">
 
 </head>
 
 <article class="schedule">
     <a href="/dashboard" class="link"> &larr; Back to dashboard</a>
+    {{#if loggedIn}}
 
 
     <div class="title">
@@ -20,5 +21,5 @@
         <img src="/../assets/test-schedule.png" alt="calendar" class="calendar"/>
     </div>
 
-    
+    {{/if}}
 </article>
