review_text updated for textarea

--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -21,7 +21,8 @@
 
         <div>
             <a href="/review/{{review.id}}">{{review.length}}</a> 
-            <button type="submit" id="save-btn" class="btn">Save Review</button>
+            <button type="submit" class="btn">Save Review</button>
+
             <button type="button" class="delete-review-btn">Delete Review</button>
         </div>
 
