--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -1,10 +1,12 @@
 <head>
-      <link rel="stylesheet" href="/../stylesheets/schedule.css">
+    <link rel="stylesheet" href="/../stylesheets/schedule.css">
 
 </head>
+<div class="link">
+        <a href="/dashboard" class="link"> &larr; Back to dashboard</a>
 
+</div>
 <article class="schedule">
-    <a href="/dashboard" class="link"> &larr; Back to dashboard</a>
 
 
     <div class="title">
@@ -13,12 +15,13 @@
 
     <div class="meta">
         Availability
-    </div>
-    
-    {{!-- show calendar and insert photo of week with time/day avaiable --}}
-    <div class="calendar-container">
-        <img src="/../assets/test-schedule.png" alt="calendar" class="calendar"/>
+        <div class="calendar-container">
+            <img src="/../assets/test-schedule.png" alt="calendar" class="calendar" />
+        </div>
     </div>
 
-    
+    {{!-- show calendar and insert photo of week with time/day avaiable --}}
+
+
+
 </article>
