--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -8,8 +8,7 @@
 }
 
 body {
-  background-color: #f5e9ee;
-
+  background-color: #fff7dd;
 }
 
 hr {
@@ -61,8 +60,6 @@ li a {
   text-decoration: none;
 }
 
-
-
 /* footer section */
 
 .footer-credits {
@@ -77,28 +74,31 @@ li a {
 
 /* dash-section */
 
-.dash-container {
-  margin-top: 100px;
+.dash-banner {
+  width: 100%;
 }
 
 .dash-section {
   display: flex;
   flex-direction: column;
-align-items: center;
-
+  align-items: center;
 }
 
 .dash-header {
   font-family: "Lato";
   font-size: 34px;
-  color: #f95f9f;
+  color: #f06408;
 }
 
+.my-reviews-h2 {
+color:rgb(100, 8, 136);
+font-size: 40px;
+}
 
 .maid-list {
-  display: flex; 
+  display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
   padding: 20px 500px;
   margin: 20px 0;
   background-color: #ffffff;
@@ -116,7 +116,6 @@ align-items: center;
   margin: 10px 0;
 }
 
-
 h2 {
   text-align: center;
   font-size: 34px;
@@ -133,30 +132,27 @@ ol {
   flex-direction: column;
 }
 
-a:visited { 
-  text-decoration: none; 
- }
+a:visited {
+  text-decoration: none;
+}
 
 /* review-section */
 
 .my-reviews {
-  padding: 20px;
-  margin: 20px 0;
-  background-color: #ffffff;
+  padding: 20px 490px;
+  margin-bottom: 50px;
   list-style: none;
   border-radius: 30px;
-  width: 80%;
+  background-color: white;
 }
 
 .dash-review-section {
-  display: flex; 
+  display: flex;
   flex-direction: column;
-  align-items: center; 
-  padding: 20px 200px;
-  margin: 20px 0;
+  align-items: center;
   list-style: none;
 }
 
 .review-li {
-line-height: 2;
+  line-height: 2;
 }
