--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,40 @@
-  <!-- login image -->
+<!-- login image -->
 
-  <!-- login section --><div class="main-container">
+<!-- login section -->
+<div class="main-container">
+
+
   <div class="form-section">
     <div class="login-section">
+      <div class="login-image-container">
+        <img src="/../assets/login.png" alt="people-waving" class="login-img">
+      </div>
       <div class="form-header">
-        <h2>Welcome Back!</h2>
-      </div>
-      <div class="form">
-        <form class="login-form">
-          <div>
-            <input class="em" type="text" id="email-login" placeholder="email" />
-          </div>
-          <div>
-            <input class="pass" type="password" id="password-login" placeholder="password" />
-          </div>
-          <div>
+        <h2 class="login-header">Welcome Back!</h2>
+        <div class="form">
+          <form class="login-form">
+            <div>
+              <input class="em" type="text" id="email-login" placeholder="email" />
+            </div>
+            <div>
+              <input class="pass" type="password" id="password-login" placeholder="password" />
+
+            </div>
             <button class="btn" type="submit">login</button>
-          </div>
+                              <div class="signup-check">
+          <p>Not a Member? <span class="pink-text">Sign Up</span> to get started.</p>
+        </div>
+          </form>
+        </div>
       </div>
-      </form>
+
     </div>
+
+    <hr>
     <!-- sign up section -->
     <div class="signup-section">
       <form class="signup-form">
-        <div class="signup-check">
-          <p>Not a Member? <span class="pink-text">Sign Up</span> to get started.</p>
-        </div>
-        <div class="form-header">
+        <div class="sign-up-header">
           <h2>Create Account</h2>
         </div>
         <div>
@@ -45,10 +53,10 @@
     </div>
     <script src="../javascript/login.js"></script>
 
-
+    {{!--
     <div class="login-image-container">
-    </div>
-  </div>
-  </div>
+      <img src="/../assets/login.png" alt="people-waving" class="login-img">
 
-
+    </div> --}}
+  </div>
+</div>
