--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -1,6 +1,7 @@
 {{!-- Show maid name and review qty --}}
-<div class="link-section">
+<div class="banner">
     <a href="/dashboard"> &larr; Back to dashboard</a>
+    <img src="../assets/banners.gif" class="reviews-banner">
 
 </div>
 
