--- a/public/stylesheets/single-maid.css
+++ b/public/stylesheets/single-maid.css
@@ -7,12 +7,13 @@
 }
 
 body {
-  background-color: rgb(229, 215, 241);
+  background-color: rgb(227, 232, 248);
 }
 
-.link-section {
-  margin-top:80px;
-  margin-left: 10px;
+
+
+.reviews-banner {
+  width: 100%;
 }
 
 /* nav */
@@ -60,6 +61,7 @@ li a:hover {
   flex-direction: column;
   align-items: center;
   line-height: 2;
+  margin-bottom: 50px;
 }
 
 .main-container {
@@ -70,13 +72,13 @@ li a:hover {
 }
 
 .maid {
-  margin-top: 50px;
+  margin: 20px;
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 50%;
-  padding: 20px 0;
+  padding: 20px;
   border-radius: 15px;
 }
 
@@ -90,7 +92,7 @@ li a:hover {
   font-family: Lato;
   padding: 5px 0;
   font-size: 18px;
-	color: #f95f9f; 
+	color: #ec9613; 
 }
 
 a {
@@ -129,20 +131,19 @@ h2 {
     font-family: Lato;
     padding: 5px 0;
     font-size: 32px;
-    color: #f95f9f; 
+    color: #f7610a; 
 }
 
 .reviews {
   font-family: Lato;
-  margin: 20px 0;
+  /* margin: 20px 0; */
   font-size: 18px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-/* text-align: center; */
   width: 50%;
   background-color: white;
-  padding: 10px;
+  padding: 20px;
 }
 
 .reviews h2 {
