--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
 --}}
 <div class="dash-container">
   <div class="dash-section">
-    <img src="../assets/dashboard.png" alt="woman-ironing" class="dash-banner">
+    <img src="../assets/dashboard-banner.gif" alt="woman-ironing" class="dash-banner">
     <div class="dash-header">
       {{!-- <h3>{{user.username}}</h3>
     </div> --}}
