--- a/views/single-maid.handlebars
+++ b/views/single-maid.handlebars
@@ -1,7 +1,7 @@
 {{!-- Show maid name and review qty --}}
 <div class="banner">
     <a href="/dashboard"> &larr; Back to dashboard</a>
-    <img src="../assets/banners.gif" class="reviews-banner">
+    <img src="../assets/reviews-banner.gif" class="reviews-banner">
 
 </div>
 
