added styles to homepage

--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -2,13 +2,14 @@
     <link rel="stylesheet" href="/../stylesheets/edit-review.css">
 </head>
 <div class="link">
-    <a href="/dashboard"> &larr; Back to dashboard</a>
+    {{!-- <a href="/dashboard"> &larr; Back to dashboard</a> --}}
 
 </div>
 <article>
 
     <form class="edit-review-form">
-        <h2> Edit Review</h2>
+        {{!-- <h2> Edit Review</h2> --}}
+        <img src="/../assets/polish.png" alt="woman-polishing">
 
         <div class="edit-section">
             <span>{{review.title}}</span>
