--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,13 +5,9 @@
     </div>
     <!-- about section -->
     <div class="about-section" id="about">
-
       <div class="about-info">
         <div class="about-header">
-          <h2>
-            Your life maid better, with <br />
-            service you trust.
-          </h2>
+<img src="/assets/dusting.png" alt="man-dusting">
           <br />
         </div>
         <div>
@@ -51,6 +47,7 @@
           /></div>
         </div>
       </div>
+    </div>
     </div>
     <!-- reviews sections -->
     <div class="reviews-section" id="reviews"> 
