--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -8,7 +8,7 @@
 }
 
 hr {
-  width: 50%;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -89,13 +89,14 @@ li a:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 30px 0;
 }
 
 .about-description {
   text-align: center;
   align-content: center;
   display: flex;
-  width: 25%;
+  width: 35%;
   justify-content: center;
 }
 
@@ -123,6 +124,7 @@ li a:hover {
   line-height: 1.3;
   padding-bottom: 20px;
   margin: 20px 0px;
+  padding: 30px 0;
 }
 
 .about-p-text {
