test edit-review img in heroku

--- a/views/edit-review.handlebars
+++ b/views/edit-review.handlebars
@@ -9,7 +9,7 @@
 
     <form class="edit-review-form">
         {{!-- <h2> Edit Review</h2> --}}
-        <img src="../public/assets/Polish.png" alt="woman-polishing">
+        <img src="../assets/Polish.png" alt="woman-polishing">
 
         <div class="edit-section">
             <span>{{review.title}}</span>
