add my reviews bback to nav bar

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -26,7 +26,7 @@
     {{#if reviews.length}}
     <section class="my-reviews">
           <div class="dash-header">
-      <h2 class="my-reviews-h2">My Reviews</h2>
+      <h2 class="my-reviews-h2" id="my-reviews">My Reviews</h2>
     </div>
       <ol class="review-li">
         {{#each reviews as |review|}}
